--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <title>Modulive</title>
 </head>
 
 <body>
