testing image caching

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,12 @@
     }
 
     preloadImage('assets/images/pic1new.png');
+    preloadImage("assets/images/pic2new.png");
+    preloadImage("assets/images/pic6new.png");
+    preloadImage("assets/images/bathroom.png");
+    preloadImage("assets/images/kitchen.png");
+    preloadImage("assets/images/living.png");
+    preloadImage("assets/images/bedroom.png");
     const scroll = new SmoothScroll('.navbar a[href*="#"]', {
       speed: 800
     });
