testing image caching logo

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       var img = document.createElement('IMG');
       img.src = imagePath;
     }
-
+    preloadImage("assets/logo.png")
     preloadImage('assets/images/pic1new.png');
     preloadImage("assets/images/pic2new.png");
     preloadImage("assets/images/pic6new.png");
