--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback" async defer></script>
+  <script>
+    // Define a callback that is executed when the recaptcha has expired
+    // function recaptchaExpired() {
+    //   alert("Your Recaptcha has expired, please verify it again !");
+    //   // setCaptureResponse(null);
+    // }
+  </script>
   <title>Modulive</title>
 </head>
 
