testing preload of images

--- a/public/index.html
+++ b/public/index.html
@@ -63,14 +63,14 @@
       var img = document.createElement('IMG');
       img.src = imagePath;
     }
-    preloadImage("assets/logo.png")
-    preloadImage('assets/images/pic1new.png');
-    preloadImage("assets/images/pic2new.png");
-    preloadImage("assets/images/pic6new.png");
-    preloadImage("assets/images/bathroom.png");
-    preloadImage("assets/images/kitchen.png");
-    preloadImage("assets/images/living.png");
-    preloadImage("assets/images/bedroom.png");
+    preloadImage("./assets/logo/logo.png")
+    preloadImage('./assets/home/pic1new.png');
+    preloadImage("./assets/home/pic2new.png");
+    preloadImage("./assets/home/pic6new.png");
+    preloadImage("./assets/home/bathroom.png");
+    preloadImage("./assets/home/kitchen.png");
+    preloadImage("./assets/home/living.png");
+    preloadImage("./assets/home/bedroom.png");
     const scroll = new SmoothScroll('.navbar a[href*="#"]', {
       speed: 800
     });
